[gd_scene load_steps=5 format=3 uid="uid://bgyc0w4k3hao6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_wxtqp"]
[ext_resource type="FontFile" uid="uid://1adpblvj8vmo" path="res://Assets/PixelFont.ttf" id="2_2fs6c"]
[ext_resource type="Texture2D" uid="uid://dwewb2ob3aikj" path="res://Assets/Button.png" id="3_fgfoh"]
[ext_resource type="Texture2D" uid="uid://cqm4sedw87ttq" path="res://Assets/Cursor.png" id="4_l0qcg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wxtqp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329412, 0.368627, 0.498039, 1)

[node name="TitleLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.270833
offset_bottom = -3.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_2fs6c")
theme_override_font_sizes/font_size = 64
text = "pumpkile"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.611111
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../ControlsButton")
action_mode = 0
button_mask = 0
texture_normal = ExtResource("3_fgfoh")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="StartLabel" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_2fs6c")
theme_override_font_sizes/font_size = 32
text = "start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.666667
anchor_right = 0.65
anchor_bottom = 0.777778
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
action_mode = 0
button_mask = 0
texture_normal = ExtResource("3_fgfoh")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="ControlsLabel" type="Label" parent="ControlsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_2fs6c")
theme_override_font_sizes/font_size = 32
text = "control"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.833333
anchor_right = 0.65
anchor_bottom = 0.944444
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../ControlsButton")
action_mode = 0
button_mask = 0
texture_normal = ExtResource("3_fgfoh")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="CreditsLabel" type="Label" parent="CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_2fs6c")
theme_override_font_sizes/font_size = 32
text = "credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cursor" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 30.0
offset_top = 72.0
offset_right = 46.0
offset_bottom = 88.0
texture = ExtResource("4_l0qcg")
expand_mode = 3

[connection signal="focus_entered" from="StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="ControlsButton" to="." method="_on_controls_button_focus_entered"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="focus_entered" from="CreditsButton" to="." method="_on_credits_button_focus_entered"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
